# SledIssue

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/sledissue/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/sledissue/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/sledissue/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  build.cmd
rust/src/: lib.rs
