[package]
name = "rust"
version = "0.1.0"
authors = ["allforabit <kevnolan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.10", default-features = false }
sled = "0.34"
once_cell= "1.7"

[lib]
name = "rust"
crate-type = ["cdylib"]
